# aegis-dq

./: 404.html  README.md  SKILL.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
aegis/: __init__.py
aegis/adapters/output/: slack.py
aegis/adapters/warehouse/: athena.py  bigquery.py  databricks.py  duckdb.py  postgres.py  quoting.py
aegis/audit/: logger.py  search.py  trajectory.py
aegis/cli/: main.py  mcp_runner.py
aegis/config/: project.py
aegis/core/: agent.py  state.py
aegis/core/nodes/: classify.py  diagnose.py  parallel.py  rca.py  remediate.py  report.py
aegis/integrations/airflow/: operator.py
aegis/integrations/mcp/: server.py
aegis/memory/: column_stats.py  rule_versions.py  store.py
aegis/pipeline/: manifest.py
aegis/rules/: anomaly.py  generator.py  schema.py  sql_verify.py  validator.py
aegis/rules/builtin/: __init__.py
aegis/rules/builtin/packs/: retail.py  retail.yaml
aegis/server/: app.py
aegis_benchmark/: __init__.py  __main__.py  harness.py  report.py
architecture/: index.html
audit-trail/: index.html
cli-reference/: index.html
contributing/: index.html
demo/: README.md  demo.tape  realworld_demo.py  run_demo.sh
docs/: architecture.md  contributing.md  getting-started.md  index.md  rule-schema-reference.md  vs-competitors.md
docs/integrations/: airflow.md  dbt.md  github-actions.md  hermes.md  mcp-clients.md  mcp.md
examples/retail_basic/: demo.py
getting-started/: index.html
integrations/airflow/: index.html
integrations/dbt/: index.html
integrations/github-actions/: index.html
integrations/hermes/: index.html
integrations/mcp/: index.html
integrations/mcp-clients/: index.html
notebooks/: quickstart.ipynb
overrides/: home.html
rule-schema-reference/: index.html
search/: search_index.json
skills/data-quality/aegis-dq/: SKILL.md
stylesheets/: extra.css
tests/: test_airflow_operator.py  test_anomaly_detection.py  test_athena_adapter.py  test_audit_logger.py  test_audit_wal.py  test_bigquery_adapter.py  test_builtin_rules.py  test_classify_node.py  test_databricks_adapter.py  test_dbt_parser.py  test_duckdb_adapter.py  test_eval_suite.py  test_fts_search.py  test_github_action.py  test_mcp_server.py  test_ollama_adapter.py  test_openai_adapter.py  test_parallel_node.py  test_postgres_adapter.py  test_pricing.py  test_project_config.py  test_rca.py  test_reconciliation.py  test_remediate_node.py  test_rest_api.py  test_retail_pack.py  test_retry_adapter.py  test_rule_generation.py  test_rules.py  test_sharegpt_export.py  test_slack_output.py  test_sql_injection.py  test_sql_verify.py  test_validate.py  test_vscode_extension.py  test_warehouse_factory.py
vs-competitors/: index.html
vscode-extension/: package.json
vscode-extension/schemas/: aegis-rule.json
vscode-extension/src/: extension.ts
