[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-dq"
version = "0.1.0"
description = "Open, audit-grade agentic data quality framework with portable industry packs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "langchain-anthropic>=0.3",
  "langchain-core>=0.3",
  "anthropic>=0.40",
  "duckdb>=1.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "pyyaml>=6.0",
  "aiofiles>=23.0",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
snowflake = ["snowflake-connector-python>=3.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "openai>=1.30"]

[project.scripts]
aegis = "aegis.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
